--- a/estilo.css
+++ b/estilo.css
@@ -98,6 +98,7 @@ span {
     height: 20vh;
     border: solid black 1px;
     text-align: center;
+    margin-top: 100px;
 }
 .div1>h2 {
     font-size: 40px;
@@ -124,7 +125,9 @@ span {
     margin: 10px;
 }
 .img-s2 {
-    width: 40%;
+    width: 50%;
+    padding-top: 15%;
+    
 }
 /*SECCIÓN3*/
 .s3 {
