--- a/estilo.css
+++ b/estilo.css
@@ -63,7 +63,7 @@ a {
 h1 {
     font-size: 30px;
 }
-span {
+#hola>.caja1-s1>h1>span {
     color: #a13cba;
     font-weight: bolder;
     font-size: 60px;
@@ -98,7 +98,8 @@ span {
     padding: 9% 0 4% 0;
 }
 .div1>h2 {
-    font-size: 40px;
+    font-size: 38px;
+    font-weight: 900;
 }
 .div1>p {
     color: #616175;
@@ -137,7 +138,7 @@ span {
     height: 560px;
 }
 .louis {
-    font-weight: bold;
+    font-weight: 900;
 }
 /*SECCIÓN4*/
 #proyectos {
@@ -158,6 +159,15 @@ span {
     width: 1100px;
     margin: auto;
     display: flex;
+    align-items: baseline;
+}
+.caja1-s5, .caja2-s5 {
+    width: 50%;
+    margin: 80px 60px;
+}
+.tit-s5 {
+    font-size: 38px;
+    font-weight: 900;
 }
 /*FOOTER*/
 footer {
