--- a/css/estilo.css
+++ b/css/estilo.css
@@ -92,25 +92,25 @@ h1 {
 /*_____SECCIÓN2_____*/
 #conocimientos {
     background-color: #F6F7FB;
-    height: 984px;
+    padding-bottom: 8em;
 }
 .div1 {
     width: 35vw;
     height: 20vh;
     text-align: center;
     margin: auto;
-    padding: 9% 0 4% 0;
+    padding: 7% 0 1.5% 0;
 }
 .div1>h2 {
-    font-size: 38px;
+    font-size: 3em;
     font-weight: 900;
 }
 .div1>p {
     color: #616175;
+    font-size: 1.2em;
 }
 .div2-s2 {
-    width: 70%;
-    height: 519px;
+    width: 50%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -122,13 +122,16 @@ h1 {
     background-color: white;
     border-radius: 10px;
     flex-basis: 260px;
-    height: 230px;
+    height: 95%;
     text-align: center;
-    margin: 10px;
+    margin: 1em;
 }
 .img-s2 {
     width: 50%;
     padding-top: 15%;
+}
+.div2-s2 h2 {
+    margin-bottom: 15%;
 }
 .caja-s2:hover {
     border: #a13cba solid 1px;
@@ -221,6 +224,7 @@ h1 {
 label {
     display: block; 
     float: center; 	
+    margin-bottom: 0.5em;
 }
 input {
 	height: 40px; 
