--- a/css/estilo.css
+++ b/css/estilo.css
@@ -99,15 +99,15 @@ h1 {
     height: 20vh;
     text-align: center;
     margin: auto;
-    padding: 7% 0 1.5% 0;
+    padding: 7rem 0 1.5rem 0;
 }
 .div1>h2 {
-    font-size: 3em;
+    font-size: 3rem;
     font-weight: 900;
 }
 .div1>p {
     color: #616175;
-    font-size: 1.2em;
+    font-size: 1.2rem;
 }
 .div2-s2 {
     width: 50%;
@@ -117,8 +117,9 @@ h1 {
     justify-content: center;
     align-content: center;    
 }
+/*Cards-s2*/
 .caja-s2 {
-    border: #616175 solid 1px;
+    border: #dddfe5 solid 1px;
     background-color: white;
     border-radius: 10px;
     flex-basis: 260px;
@@ -159,7 +160,50 @@ h1 {
 /*_____SECCIÓN4_____*/
 #proyectos {
     text-align: center;
-    height: 1518px;
+    padding-bottom: 8em;
+}
+#proyectos .div1 h2 {
+    margin-bottom: 0.5em;
+}
+.div2-s4 {
+    width: 60%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;    
+}
+/*Cards-s4*/
+.caja-s4 {
+    background-color: white;
+    border: #dddfe5 solid 1px;
+    border-radius: 10px;
+    width: 30.2%;
+    height: 28%;
+    text-align: center;
+    margin: 0 1em 1em 1em;
+}
+.img-s4 {
+    width: 90%;
+    padding-top: 15%;
+    margin-bottom: 6%;
+}
+.div2-s4 h3 {
+    margin-bottom: 10%;
+}
+.caja-s4:hover {
+    border: #a13cba solid 1px;
+    color: #a13cba;
+}
+.caja-s4:hover h3 {
+    color: #a13cba;
+}
+.caja-s4:active {
+    box-shadow: 0px 0px 10px #a13cba;
+    border-radius: 10px;
+}
+.github {
+    text-decoration: none;
+    font-weight: bold;
 }
 /*_____SECCIÓN5_____*/
 #contacto {
@@ -169,7 +213,7 @@ h1 {
 }
 .div1-s5 {
     background-color: white;
-    border: 1px gray solid;
+    border: 1px #dddfe5 solid;
     border-radius: 10px;
     width: 60vw;
     margin: auto;
