--- a/css/estilo.css
+++ b/css/estilo.css
@@ -53,41 +53,52 @@ a {
 /*__________MAIN__________*/
 /*_____SECCIÓN1_____*/
 #hola {
+    text-align: center;
+    padding: 9.5rem 0;
+}
+.div-s1 {
+    width: 60vw;
+    margin: auto;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 740px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;  
 }
 .caja1-s1 {
+    text-align: left;
     font-size: large;
     line-height: 50px;
-    width: 30vw;
+    width: 40%;
+}
+.caja2-s1 {
+    width: 45%;
+    height: 70%;
 }
 h1 {
-    font-size: 30px;
+    font-size: 2em;
+    margin-bottom: 1rem;
 }
-#hola>.caja1-s1>h1>span {
+.caja1-s1 span {
     color: #a13cba;
     font-weight: bolder;
-    font-size: 60px;
+    font-size: 3.75rem;
 }
 .p-s1 {
     color: #616175;
-    margin-bottom: 15px;
+    margin-bottom: 2rem;
 }
-#hola>div>a {
+.caja1-s1 a {
     background-color: #a13cba;
     color: white;
     border-radius: 50px;
-    padding: 15px 25px;
+    padding: 1rem 2rem;
 }
-#hola>div>a:hover {
+.caja1-s1 a:hover {
     opacity: 0.7;
-    color: white;
 }
 .img-s1 {
-    width: 40vw;
+    width: 100%;
+    margin: 9em 0;
 }
 /*_____SECCIÓN2_____*/
 #conocimientos {
@@ -180,7 +191,7 @@ h1 {
     width: 30.2%;
     height: 28%;
     text-align: center;
-    margin: 0 1em 1em 1em;
+    margin: 1em;
 }
 .img-s4 {
     width: 90%;
