--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,48 +6,66 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #FFFFFF;
-    /*box-shadow: #C6C6C6 inset -7px 0 25px -7px;*/
+    /*box-shadow: inset -7px 0 25px -7px;*/
 }
-/*.s3, footer {
-    box-shadow: #8a2da1 inset -7px 0 15px -7px;
-}*/
-/*__________HEADER__________*/
-header {
-    box-shadow: #F2F2F2 0px 10px 12px 0px;
-    height: 93px;
-    position: sticky;
-    top: 0%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: white;
-}
-/*_____NAV_____*/
-nav {
-   padding-right: 15%;
-}
-ul {
-    list-style: none;
-}
-li {
-    display: inline;
-    margin: 0px 17px
+section, footer {
+    box-shadow: inset -7px 0 15px -7px;
 }
 a {
     text-decoration: none;
     color: black;
 }
-.distinto {
-    background-color: #a13cba;
-    color: #FFFFFF;
-    border-radius: 50px;
-    padding: 10px 20px;
+
+/*__________HEADER__________*/
+header {
+    height: 5.8rem;
+    background-color: white;
 }
-.menu li a:hover {
+/*_____NAV_____*/
+nav {
+    height: 5.8rem;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0px 10px 10px 0px;
+    position: fixed;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contenedor-nav {
+    width: 60%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+.caja-nav {
+    margin: 0 1rem;
+    padding: 0.5rem;
+}
+.caja-nav:active {
+    box-shadow: 0px 0px 10px #a13cba;
+    border-radius: 25px;
+}
+.menu a {
+    text-decoration: none;
+    color: black;
+}
+.menu a:hover {
     color: #a13cba;
 }
-.menu li .distinto:hover {
+.distinto {
+    background-color: #a13cba;
+    border-radius: 50px;
+    padding: 0.8rem 2rem;
+}
+.distinto a {
+    color: #FFFFFF;
+}
+.distinto:hover {
     opacity: 0.7;
+}
+.distinto a:hover {
     color: #FFFFFF;
 }
 /*__________MAIN__________*/
@@ -359,6 +377,13 @@ footer>a:active {
     box-shadow: 0px 0px 10px white;
 }
 /*Menú de íconos*/
+footer ul {
+    list-style: none;
+}
+footer li {
+    display: inline;
+    margin: 0 17px;
+}
 footer i {
     color: #a13cba;
     font-size: 1.5em;
