--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,16 +6,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #FFFFFF;
-    /*box-shadow: inset -7px 0 25px -7px;*/
-}
-section, footer {
-    box-shadow: inset -7px 0 15px -7px;
+    box-shadow: inset -26px 0px 9px -15px rgba(97,97,117,0.50);
 }
 a {
     text-decoration: none;
     color: black;
 }
-
 /*__________HEADER__________*/
 header {
     height: 5.8rem;
@@ -26,7 +22,7 @@ nav {
     height: 5.8rem;
     width: 100%;
     background-color: white;
-    box-shadow: 0px 10px 10px 0px;
+    box-shadow: 0px 8px 10px 0px rgba(161,60,186,0.50);
     position: fixed;
     width: 100%;
     display: flex;
@@ -42,6 +38,14 @@ nav {
 .caja-nav {
     margin: 0 1rem;
     padding: 0.5rem;
+}
+.bordenav {
+    
+    height: 10vh;
+    width: 15px;
+    position: absolute;
+    right: 0;
+    background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(97,97,117,0.5));
 }
 .caja-nav:active {
     box-shadow: 0px 0px 10px #a13cba;
@@ -122,6 +126,7 @@ h1 {
 #conocimientos {
     background-color: #F6F7FB;
     padding-bottom: 8em;
+    box-shadow: inset -26px 0px 9px -15px rgba(97,97,117,0.50);
 }
 .div1 {
     width: 35vw;
@@ -168,8 +173,9 @@ h1 {
     color: #a13cba;
 }
 /*_____SECCIÓN3_____*/
-.s3 {
+#s3 {
     background-color: #a13cba;
+    box-shadow: inset -26px 0px 9px -15px rgba(97,97,117,0.50);
     text-align: center;
     color: white;
     padding: 4em 0;
@@ -177,7 +183,7 @@ h1 {
 .comillas {
     width: 8%;
 }
-.s3 p {
+#s3 p {
     font-size: 1.2vw;
     width: 60vw;
     margin: 2em auto;
@@ -237,6 +243,7 @@ h1 {
 /*_____SECCIÓN5_____*/
 #contacto {
     background-color: #F6F7FB;
+    box-shadow: inset -26px 0px 9px -15px rgba(97,97,117,0.50);
     text-align: center;
     padding: 12em 0;
 }
@@ -365,6 +372,7 @@ form textarea:focus:invalid {
 /*__________FOOTER__________*/
 footer {
     background-color: #a13cba;
+    box-shadow: inset -26px 0px 9px -15px rgba(97,97,117,0.50);
     text-align: center;
     padding: 4em 0;
 }
