--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,7 +22,7 @@ nav {
     height: 5.8rem;
     width: 100%;
     background-color: white;
-    box-shadow: 0px 8px 10px 0px rgba(161,60,186,0.50);
+    box-shadow: 0px 8px 10px 0px rgba(109,201,247,0.5);
     position: fixed;
     width: 100%;
     display: flex;
@@ -47,7 +47,7 @@ nav {
     background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(97,97,117,0.5));
 }
 .caja-nav:active {
-    box-shadow: 0px 0px 10px #a13cba;
+    box-shadow: 0px 0px 10px #6dc9f7;
     border-radius: 25px;
 }
 .menu a {
@@ -55,10 +55,10 @@ nav {
     color: black;
 }
 .menu a:hover {
-    color: #a13cba;
+    color: #fa759e;
 }
 .distinto {
-    background-color: #a13cba;
+    background-color: #6dc9f7;
     border-radius: 50px;
     padding: 0.8rem 2rem;
 }
@@ -103,9 +103,10 @@ nav {
 h1 {
     font-size: 2em;
     margin-bottom: 1rem;
+    color: #3a2c60;
 }
 .caja1-s1 span {
-    color: #a13cba;
+    color: #fa759e;
     font-weight: bolder;
     font-size: 3.75rem;
 }
@@ -114,7 +115,7 @@ h1 {
     margin-bottom: 2rem;
 }
 .caja1-s1 a {
-    background-color: #a13cba;
+    background-color: #6dc9f7;
     color: white;
     border-radius: 50px;
     padding: 1rem 2rem;
@@ -142,6 +143,7 @@ h1 {
 }
 .div1>h2 {
     font-size: 2.5rem;
+    color: #3a2c60;
     font-weight: 900;
 }
 .div1>p {
@@ -175,12 +177,12 @@ h1 {
     margin-bottom: 15%;
 }
 .caja-s2:hover {
-    border: #a13cba solid 1px;
-    color: #a13cba;
+    border: #6dc9f7 solid 1px;
+    color: #6dc9f7;
 }
 /*_____SECCIÓN3_____*/
 #s3 {
-    background-color: #a13cba;
+    background-color: #3a2c60;
     box-shadow: inset -26px 0px 9px -15px rgba(97,97,117,0.50);
     text-align: center;
     color: white;
@@ -235,18 +237,19 @@ h1 {
 }
 .img-s4 {
     width: 90%;
+    height: 70%;
     padding-top: 15%;
     margin-bottom: 6%;
 }
 .caja-s4:hover {
-    border: #a13cba solid 1px;
-    color: #a13cba;
+    border: #6dc9f7 solid 1px;
+    color: #6dc9f7;
 }
 .caja-s4:hover h3 {
-    color: #a13cba;
+    color: #6dc9f7;
 }
 .caja-s4:active {
-    box-shadow: 0px 0px 10px #a13cba;
+    box-shadow: 0px 0px 10px #6dc9f7;
     border-radius: 10px;
 }
 .github {
@@ -280,12 +283,14 @@ h1 {
     text-align: left;
 }
 .tit-s5 {
-    font-size: 2.5em;
+    font-size: 2.3em;
     font-weight: 900;
+    color: #3a2c60;
     margin-bottom: 0.5em;
 }
 .caja1-s5>p {
     margin-bottom: 2em;
+    color: #616175;
 }
 .caja1-s5>div {
     margin-bottom: 1em;
@@ -293,22 +298,22 @@ h1 {
     padding: 5px 20px 5px 0px;
 }
 .caja1-s5>div:active {
-    box-shadow: 0px 0px 10px #a13cba;
+    box-shadow: 0px 0px 10px #6dc9f7;
     border-radius: 25px;
 }
 .caja1-s5 i {
-    color: #a13cba;
+    color: #fa759e;
     margin: 0 10px;
     padding: 10px;
 }
 .divs:hover i {
     color: white;
-    background-color: #a13cba;
+    background-color: #fa759e;
     border-radius: 25px; 
     padding: 10px;
 }
 .divs:hover a {
-    color:#a13cba;
+    color:#fa759e;
 }
 /*Escribime*/
 .caja2-s5 {
@@ -354,8 +359,8 @@ textarea {
     width: 25%;
 	font-size: 1em;
     color: white;
-    background-color: #a13cba; 
-	border: #a13cba solid 1px; 
+    background-color: #6dc9f7; 
+	border: #6dc9f7 solid 1px; 
 	border-radius: 20px;   
     cursor: pointer;
 }
@@ -387,7 +392,7 @@ form textarea:focus:invalid {
 }
 /*__________FOOTER__________*/
 footer {
-    background-color: #a13cba;
+    background-color: #3a2c60;
     box-shadow: inset -26px 0px 9px -15px rgba(97,97,117,0.50);
     text-align: center;
     padding: 4em 0;
@@ -409,7 +414,7 @@ footer li {
     margin: 0 17px;
 }
 footer i {
-    color: #a13cba;
+    color: #fa759e;
     font-size: 1.5em;
     border: white solid 1px;
     border-radius: 25px; 
@@ -419,7 +424,7 @@ footer i {
 }
 footer i:hover {
     color: white;
-    background-color: #a13cba;
+    background-color: #fa759e;
 }
 footer i:active {
     box-shadow: 0px 0px 10px white;
