--- a/css/estilo.css
+++ b/css/estilo.css
@@ -95,7 +95,7 @@ nav {
     margin: 2rem;
 }
 .caja2-s1 {
-    /*border: blue solid 1px;*/
+    border: blue solid 1px;
     width: 31.25rem;
     height: 28.125rem;
     margin: 2rem;
